# lz-dvn-dashboard

./: .gitignore  README.md
.claude/: PROJECT_STATUS.md
backend/: pyproject.toml  railway.toml  requirements.txt  run.sh  scan_oft_dvn.py
backend/app/: aggregator.py  cache.py  chains.py  main.py  models.py  prices.py  registry.py  scanner.py  transfer_api.py
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  railway.toml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChainGrid.tsx  CopyBtn.tsx  Dashboard.tsx  DetailPanel.tsx  EmptyState.tsx  FilterBar.tsx  Header.tsx  Legend.tsx  OftTable.tsx  SpreadBar.tsx  StatusBar.tsx  StatusPill.tsx  TvlPie.tsx
frontend/lib/: api.ts  format.ts  sort.ts  types.ts
