[project]
name = "kelp-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for LayerZero OFT DVN scanner dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiohttp>=3.10.0",
    "eth-abi>=5.1.0",
    "eth-utils>=5.1.0",
    "eth-hash[pycryptodome]>=0.7.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT"]

[tool.uv]
package = false
